add update data from iframe

--- a/src/options/index.css
+++ b/src/options/index.css
@@ -11,6 +11,13 @@
     }
 }
 
+body.noscroll
+{
+    position: fixed;
+    overflow-y: scroll;
+    width: 100%;
+}
+
 .v-enter-active {
     transition: opacity 0.5s ease;
 }
