--- a/src/modal/index.css
+++ b/src/modal/index.css
@@ -117,7 +117,7 @@ html, body{
 }
 
 .color-hex{
-    width: 60px;
+    min-width: 60px;
     text-align: center;
     background-color: rgba(0,0,0,.1);
     color: white;
@@ -142,4 +142,21 @@ html, body{
 #error{
     font-size: 14px;
     color: gray;
+}
+
+#raccourcia-editor-container{
+    width: 100%;
+}
+
+.ck-editor__editable {
+    height: 50vh;
+}
+
+.ck-editor{
+    margin-right: 1rem !important;
+    margin-left: 1rem !important;
+}
+
+#editor-content{
+    display: none;
 }
